# WLoopCalculator

./: CMakeLists.txt  README.md
cmake/GetGitRevisionDescription/: CMakeLists.txt  version.cpp.in
include/: confUtils.h  obs.h  su2.h
src/: main.cpp
